# Shell-Exam-Tool

./: .gitignore  CONFIGURATION.md  Cargo.toml  INSTALL.md  LICENSE  PROJECT_SUMMARY.md  README.md  build.sh
exam-recorder/: Cargo.toml
exam-recorder/src/: encryption.rs  main.rs  metadata.rs  recorder.rs  state.rs
exam-viewer/: Cargo.toml
exam-viewer/src/: analyzer.rs  decryptor.rs  main.rs  reporter.rs
scripts/: build-deb.sh  build-rpm.sh  build-tar.sh
