[package]
name = "exam-recorder"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Student-side secure terminal session recorder for Exam Recorder Suite"
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "exam-recorder"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
rand = "0.8"
zip = "0.6"
sha2 = "0.10"
hex = "0.4"
nix = { version = "0.28", features = ["term", "process", "poll", "fs"] }
libc = "0.2"
termios = "0.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
hostname = "0.4"
pbkdf2 = "0.12"

