[package]
name = "exam-viewer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Instructor-side decrypter, analyzer, and log viewer for Exam Recorder Suite"
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "exam-viewer"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
rand = "0.8"
zip = "0.6"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rpassword = "7.3"
colored = "2.1"
pbkdf2 = "0.12"

